--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -1,9 +1,15 @@
 <head>
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js" integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK" crossorigin="anonymous"></script>
 </head>
+
+{% extends 'base.html' %}
+{% block content %}
 
 <h1>Welcome to the Home Page, {{name}}</h1>
 <h2>This is the full home page</h2>
+
+
 
 <div class="container">
     <form action="">
@@ -13,16 +19,39 @@
         </label>
         <input type="text" class="form-control" id="searchMovie" name="searchMovie">
       </div>
+      <button type="submit" class="btn btn-primary">Search</button>
     </form>
 
  <p>Searching for {{searchTerm}}</p>
- {% for movie in movies %}
-   <h2>{{movie.title}}</h2>
-   <h3>{{movie.description}}</h3>
-   <img src="{{movie.image.url}}">
-   {% if movie.url %}
-        <a href="{{movie.url}}">Movie Link</a>
-    {% endif %}
-    {% endfor %}
-    <br/>
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
+  {% for movie in movies %}
+  <div class="col">
+    <div class="card h-100">
+      <img src="{{ movie.image.url }}" class="card-img-top img-fluid" alt="{{ movie.title }}">
+      <div class="card-body">
+        <h5 class="card-title fw-bold">{{ movie.title }}</h5>
+        <p class="card-text">{{ movie.description }}</p>
+        <p class="card-text">{{ movie.genre}}</p>
+        <p class="card-text">{{ movie.year }}</p>
+        {% if movie.url %}
+        <a href="{{ movie.url }}" class="btn btn-primary">Movie Link</a>
+        {% endif %}
+      </div>
+    </div>
+  </div>
+  {% endfor %}
 </div>
+<br/>
+<br/>
+<br/>
+    <h2>Join our mailing list:</h2>
+    <form action="{% url 'signup' %}">
+      <div class="mb-3">
+        <label for="email" class="form-label">Enter your email:</label>
+        <input type="email" class="form-control" name="email" />
+      </div>
+      <button type="submit" class="btn btn-primary">Sign Up</button>
+    </form>
+</div>
+
+{% endblock content %}
