--- a/moviereviews/templates/base.html
+++ b/moviereviews/templates/base.html
@@ -23,6 +23,9 @@
            <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'statistics' %}">Statistics</a>
         </li>
+           <li class="nav-item">
+          <a class="nav-link {% if request.resolver_match.url_name == 'recommend' %}active{% endif %}" href="{% url 'recommend' %}">Recommender</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Login</a>
         </li>
